Fixed spacing around blockquotes and width of lists on small screens

--- a/static/css/override.css
+++ b/static/css/override.css
@@ -363,10 +363,12 @@ div.epigraph > blockquote > footer > cite {
 blockquote { 
   font-style: italic; 
   font-size: 1em;
+  border-left: 5px solid #4a4a4a;
 }
 
 blockquote p { 
   width: 50%; 
+  margin-top: 0px;
 }
 
 blockquote footer { 
@@ -540,8 +542,8 @@ label.margin-toggle:not(.sidenote-number) { display: none; }
  pre.code {
    width: 87.5%; 
  }
- ol, ul { 
-   width: 85%; 
+ li { 
+   width: 90%; 
  }
  figure { 
    max-width: 90%; 
